# eldiro

./: README.md
crates/arena/: Cargo.toml
crates/arena/src/: lib.rs
crates/ast/: Cargo.toml
crates/ast/src/: lib.rs  validation.rs
crates/eldiro/: Cargo.toml
crates/eldiro-cli/: Cargo.toml
crates/eldiro-cli/src/: main.rs
crates/eldiro/src/: binding_def.rs  env.rs  expr.rs  func_def.rs  lexer.rs  lib.rs  main.rs  parser.rs  stmt.rs  syntax.rs  utils.rs  val.rs
crates/eldiro/src/expr/: binding_usage.rs  block.rs  func_call.rs
crates/eldiro/src/parser/: event.rs  expr.rs  marker.rs  sink.rs  source.rs
crates/hir/: Cargo.toml
crates/hir/src/: database.rs  lib.rs
crates/lexer/: Cargo.toml
crates/lexer/src/: lib.rs  token_kind.rs
crates/parser/: Cargo.toml
crates/parser/src/: event.rs  grammar.rs  lib.rs  parser.rs  sink.rs  source.rs
crates/parser/src/grammar/: expr.rs  stmt.rs
crates/parser/src/parser/: marker.rs  parse_error.rs
crates/syntax/: Cargo.toml
crates/syntax/src/: lib.rs
fuzz/: Cargo.toml
fuzz/corpus/main/: .gitignore
fuzz/corpus/parse_lower/: example
fuzz/fuzz_targets/: main.rs  parse_lower.rs
src/: binding_def.rs  binding_usage.rs  env.rs  expr.rs  lib.rs  stmt.rs  utils.rs  val.rs
src/expr/: binding_usage.rs  block.rs
