[package]
authors = ["Aramis Razzaghipour <aramisnoah@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
name = "hir"
version = "0.1.0"

[dependencies]
ast = {path = "../ast"}
la-arena = "0.2.0"
smol_str = "0.1.17"
syntax = {path = "../syntax"}

[dev-dependencies]
parser = {path = "../parser"}
